syntax = "proto3";

package models;
option go_package="code.cloudfoundry.org/bbs/models";

import "desired_lrp.proto";
import "error.proto";

message ProtoDesiredLRPLifecycleResponse {
  ProtoError error = 1;
}

message ProtoDesiredLRPsResponse {
  ProtoError error = 1;
  repeated ProtoDesiredLRP desired_lrps = 2;
}

message ProtoDesiredLRPsRequest {
  string domain = 1 [json_name = "domain"];
  repeated string process_guids = 2;
}

message ProtoDesiredLRPResponse {
  ProtoError error = 1;
  ProtoDesiredLRP desired_lrp = 2;
}

message ProtoDesiredLRPSchedulingInfosResponse {
  ProtoError error = 1;
  repeated ProtoDesiredLRPSchedulingInfo desired_lrp_scheduling_infos = 2;
}

message ProtoDesiredLRPSchedulingInfoByProcessGuidResponse {
  ProtoError error = 1;
  ProtoDesiredLRPSchedulingInfo desired_lrp_scheduling_info = 2;
}

message ProtoDesiredLRPByProcessGuidRequest {
  string process_guid = 1 [json_name = "process_guid"];
}

message ProtoDesireLRPRequest {
  ProtoDesiredLRP desired_lrp = 1;
}

message ProtoUpdateDesiredLRPRequest {
  string process_guid = 1 [json_name = "process_guid"];
  ProtoDesiredLRPUpdate update = 2;
}

message ProtoRemoveDesiredLRPRequest {
  string process_guid = 1 [json_name = "process_guid"];
}
